SVG icon theme: replace custom icon for audio tracks with SVG from Oxygen
Part of the fix of #3335.

--- a/src/mkvtoolnix-gui/qt_resources.qrc
+++ b/src/mkvtoolnix-gui/qt_resources.qrc
@@ -16,7 +16,6 @@
   <file alias='icons/mkvtoolnix-gui/128x128@2/mkvtoolnix-gui@2x.png'>../../share/icons/256x256/mkvtoolnix-gui.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16/checkbox-unchecked.png'>../../share/icons/16x16/checkbox-unchecked.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16@2/checkbox-unchecked@2x.png'>../../share/icons/32x32/checkbox-unchecked.png</file>
-  <file alias='icons/mkvtoolnix-gui/16x16/knotify.png'>../../share/icons/16x16/knotify.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16/mkvextract.png'>../../share/icons/16x16/mkvextract.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16@2/mkvextract@2x.png'>../../share/icons/32x32/mkvextract.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16/mkvinfo.png'>../../share/icons/16x16/mkvinfo.png</file>
@@ -90,6 +89,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/arrow-right-double.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/arrow-right-double.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/arrow-right.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/arrow-right.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/arrow-up.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/arrow-up.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/audio-headphones.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/audio-headphones.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/character-set.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/character-set.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/clock.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/clock.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/dialog-cancel.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/dialog-cancel.svg</file>
@@ -135,6 +135,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/arrow-right-double.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/arrow-right-double.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/arrow-right.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/arrow-right.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/arrow-up.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/arrow-up.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/audio-headphones.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/audio-headphones.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/character-set.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/character-set.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/checkbox.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/checkbox.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/clock.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/clock.svg</file>
@@ -243,6 +244,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/view-task.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/view-task.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/application-octet-stream.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/application-octet-stream.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/archive-remove.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/archive-remove.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/audio-headphones.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/audio-headphones.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/checkbox.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/checkbox.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/clock.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/clock.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/code-class.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/code-class.svg</file>
