Debian packaging: create rules & control with distro/release-specific values
For Ubuntu 22.04 and later the GUI will be built with Qt 6 instead of
Qt 5 due to severe issues with 22.04, Qt 5 and high DPI displays. See
issue #3358 for more information.

Unfortunately Debian's package tooling isn't powerful enough to
express complex dependencies, and it cannot express things based on
the distribution & version the package is built for. The packaging for
Qt 6 requires different libraries than the packaging for Qt 5,
obviously.

The only thing one could do in a single `control` file is using ORed
dependencies such as `libqt6svg6 | libqt5svg5`, but that can lead to
situations where the user has `libqt5svg5` installed, doesn't have
`libqt6svg6` installed, and then MKVToolNix built with Qt 6 will
install just fine but all the icons will be missing as it cannot load
the SVG plugin dynamically.

Therefore the `control` & `rules` files are now built from templates,
and a Ruby script called `packaging/debian/create_files.rb` is used to
create the files from their templates. The user can specify the
distribution & version to create for with command line arguments. If
not specified, the script will attempt to guess the distribution &
version it's running on.

Only Debian ≥ 10 & Ubuntu ≥ 20.04 are supported, same as before.

--- a/packaging/debian/control.erb
+++ b/packaging/debian/control.erb
@@ -1,3 +1,4 @@
+<% use_qt6 = (distro == 'ubuntu') && (version >= Gem::Version.new('22.04')) %>
 Source: mkvtoolnix
 Section: video
 Priority: optional
@@ -7,11 +8,17 @@ Standards-Version: 3.9.5
 Build-Depends:
  debhelper (>= 9),
  rake (>= 10),
- zlib1g-dev, libflac-dev, libogg-dev, libvorbis-dev, libgmp-dev,
- libboost-dev (>= 1.66), qtbase5-dev, qtbase5-dev-tools,
- qtmultimedia5-dev, qt5-default | base-files (>= 11ubuntu18),
- libcmark-dev, libgtest-dev, libfmt-dev (>= 4), libdvdread-dev,
- nlohmann-json3-dev, pkg-config, po4a, docbook-xsl, xsltproc
+ zlib1g-dev, libflac-dev, libogg-dev, libvorbis-dev, libgmp-dev, libcmark-dev,
+ libboost-dev (>= 1.66), libgtest-dev, libfmt-dev (>= 4), libdvdread-dev,
+ nlohmann-json3-dev, pkg-config, po4a, docbook-xsl, xsltproc,
+<% if use_qt6 %>
+ qt6-base-dev, qt6-base-dev-tools, qt6-multimedia-dev, libqt6svg6-dev
+<% else %>
+<%   if ((distro == 'ubuntu') && (version < Gem::Version.new('20.04'))) || ((distro == 'debian') && (version < Gem::Version.new('11'))) %>
+ qt5-default,
+<%   end %>
+ qtbase5-dev, qtbase5-dev-tools, qtmultimedia5-dev, libqt5svg5-dev
+<% end %>
 
 Package: mkvtoolnix
 Architecture: any
@@ -31,7 +38,12 @@ Description: Set of command-line tools to work with Matroska files
 
 Package: mkvtoolnix-gui
 Architecture: any
-Depends: mkvtoolnix (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: mkvtoolnix (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
+<% if use_qt6 %>
+ libqt6svg6, qt6-qpa-plugins | qt6-wayland
+<% else %>
+ libqt5svg5
+<% end %>
 Suggests: mediainfo-gui
 Replaces: mkvtoolnix (<= 4.6.0-1)
 Description: Set of tools to work with Matroska files - GUI frontend
