use American English spelling for "color" instead of British English

--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -310,9 +310,9 @@
              </item>
             </layout>
            </widget>
-           <widget class="QWidget" name="colourInformationPage">
+           <widget class="QWidget" name="colorInformationPage">
             <attribute name="title">
-             <string>Colour information</string>
+             <string>Color information</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_25">
              <item>
@@ -330,9 +330,9 @@
              </item>
             </layout>
            </widget>
-           <widget class="QWidget" name="colourMasteringMetaInformationPage">
+           <widget class="QWidget" name="colorMasteringMetaInformationPage">
             <attribute name="title">
-             <string>Colour mastering meta information</string>
+             <string>Color mastering meta information</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_26">
              <item>
@@ -952,9 +952,9 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="colourInformationBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="colorInformationBox">
                      <property name="title">
-                      <string>Colour information</string>
+                      <string>Color information</string>
                      </property>
                      <layout class="QGridLayout" name="gridLayout_4">
                       <item row="6" column="0">
@@ -965,19 +965,19 @@
                        </widget>
                       </item>
                       <item row="5" column="1">
-                       <widget class="QLineEdit" name="colourRange"/>
+                       <widget class="QLineEdit" name="colorRange"/>
                       </item>
                       <item row="1" column="0">
                        <widget class="QLabel" name="bitsPerColourChannelLabel">
                         <property name="text">
-                         <string>Bits per colour channel:</string>
+                         <string>Bits per color channel:</string>
                         </property>
                        </widget>
                       </item>
                       <item row="7" column="0">
-                       <widget class="QLabel" name="colourPrimariesLabel">
+                       <widget class="QLabel" name="colorPrimariesLabel">
                         <property name="text">
-                         <string>Colour primaries:</string>
+                         <string>Color primaries:</string>
                         </property>
                        </widget>
                       </item>
@@ -1022,9 +1022,9 @@
                        </widget>
                       </item>
                       <item row="0" column="0">
-                       <widget class="QLabel" name="colourMatrixCoefficientsLabel">
+                       <widget class="QLabel" name="colorMatrixCoefficientsLabel">
                         <property name="text">
-                         <string>Colour matrix coefficients:</string>
+                         <string>Color matrix coefficients:</string>
                         </property>
                        </widget>
                       </item>
@@ -1032,12 +1032,12 @@
                        <widget class="QLineEdit" name="bitsPerColourChannel"/>
                       </item>
                       <item row="7" column="1">
-                       <widget class="QLineEdit" name="colourPrimaries"/>
+                       <widget class="QLineEdit" name="colorPrimaries"/>
                       </item>
                       <item row="5" column="0">
-                       <widget class="QLabel" name="colourRangeLabel">
+                       <widget class="QLabel" name="colorRangeLabel">
                         <property name="text">
-                         <string>Colour range:</string>
+                         <string>Color range:</string>
                         </property>
                        </widget>
                       </item>
@@ -1045,7 +1045,7 @@
                        <widget class="QLineEdit" name="cbSubsampling"/>
                       </item>
                       <item row="0" column="1">
-                       <widget class="QLineEdit" name="colourMatrixCoefficients"/>
+                       <widget class="QLineEdit" name="colorMatrixCoefficients"/>
                       </item>
                       <item row="9" column="1">
                        <widget class="QLineEdit" name="maximumFrameLight"/>
@@ -1061,9 +1061,9 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="colourMasteringMetaInformationBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="colorMasteringMetaInformationBox">
                      <property name="title">
-                      <string>Colour mastering meta information</string>
+                      <string>Color mastering meta information</string>
                      </property>
                      <layout class="QGridLayout" name="gridLayout_5">
                       <item row="2" column="0">
@@ -1086,7 +1086,7 @@
                       <item row="1" column="0">
                        <widget class="QLabel" name="whiteColourCoordinatesLabel">
                         <property name="text">
-                         <string>White colour coordinates:</string>
+                         <string>White color coordinates:</string>
                         </property>
                        </widget>
                       </item>
@@ -2384,14 +2384,14 @@
   <tabstop>displayHeight</tabstop>
   <tabstop>cropping</tabstop>
   <tabstop>stereoscopy</tabstop>
-  <tabstop>colourMatrixCoefficients</tabstop>
+  <tabstop>colorMatrixCoefficients</tabstop>
   <tabstop>bitsPerColourChannel</tabstop>
   <tabstop>chromaSubsampling</tabstop>
   <tabstop>cbSubsampling</tabstop>
   <tabstop>chromaSiting</tabstop>
-  <tabstop>colourRange</tabstop>
+  <tabstop>colorRange</tabstop>
   <tabstop>transferCharacteristics</tabstop>
-  <tabstop>colourPrimaries</tabstop>
+  <tabstop>colorPrimaries</tabstop>
   <tabstop>maximumContentLight</tabstop>
   <tabstop>maximumFrameLight</tabstop>
   <tabstop>chromaticityCoordinates</tabstop>
