rename more instances of "colour" to "color"

--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -968,7 +968,7 @@
                        <widget class="QLineEdit" name="colorRange"/>
                       </item>
                       <item row="1" column="0">
-                       <widget class="QLabel" name="bitsPerColourChannelLabel">
+                       <widget class="QLabel" name="bitsPerColorChannelLabel">
                         <property name="text">
                          <string>Bits per color channel:</string>
                         </property>
@@ -1029,7 +1029,7 @@
                        </widget>
                       </item>
                       <item row="1" column="1">
-                       <widget class="QLineEdit" name="bitsPerColourChannel"/>
+                       <widget class="QLineEdit" name="bitsPerColorChannel"/>
                       </item>
                       <item row="7" column="1">
                        <widget class="QLineEdit" name="colorPrimaries"/>
@@ -1081,10 +1081,10 @@
                        </widget>
                       </item>
                       <item row="1" column="1">
-                       <widget class="QLineEdit" name="whiteColourCoordinates"/>
+                       <widget class="QLineEdit" name="whiteColorCoordinates"/>
                       </item>
                       <item row="1" column="0">
-                       <widget class="QLabel" name="whiteColourCoordinatesLabel">
+                       <widget class="QLabel" name="whiteColorCoordinatesLabel">
                         <property name="text">
                          <string>White color coordinates:</string>
                         </property>
@@ -2385,7 +2385,7 @@
   <tabstop>cropping</tabstop>
   <tabstop>stereoscopy</tabstop>
   <tabstop>colorMatrixCoefficients</tabstop>
-  <tabstop>bitsPerColourChannel</tabstop>
+  <tabstop>bitsPerColorChannel</tabstop>
   <tabstop>chromaSubsampling</tabstop>
   <tabstop>cbSubsampling</tabstop>
   <tabstop>chromaSiting</tabstop>
@@ -2395,7 +2395,7 @@
   <tabstop>maximumContentLight</tabstop>
   <tabstop>maximumFrameLight</tabstop>
   <tabstop>chromaticityCoordinates</tabstop>
-  <tabstop>whiteColourCoordinates</tabstop>
+  <tabstop>whiteColorCoordinates</tabstop>
   <tabstop>maximumLuminance</tabstop>
   <tabstop>minimumLuminance</tabstop>
   <tabstop>projectionType</tabstop>
