--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -136,6 +136,9 @@
                <property name="text">
                 <string>Number of &amp;recently used entries to remember:</string>
                </property>
+               <property name="buddy">
+                <cstring>sbGuiNumRecentlyUsedStrings</cstring>
+               </property>
               </widget>
              </item>
              <item row="2" column="1">
