--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -727,8 +727,18 @@
           <layout class="QVBoxLayout" name="verticalLayout_43">
            <item>
             <layout class="QGridLayout" name="gridLayout_10">
-             <item row="0" column="1">
-              <widget class="QComboBox" name="cbMAddingAppendingFilesPolicy">
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_23">
+               <property name="text">
+                <string>When adding files via &amp;drag &amp;&amp; drop/copy &amp;&amp; paste:</string>
+               </property>
+               <property name="buddy">
+                <cstring>cbMDragAndDropFilesPolicy</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QComboBox" name="cbMDragAndDropFilesPolicy">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -747,18 +757,28 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_23">
-               <property name="text">
-                <string>When adding files via &amp;drag &amp;&amp; drop/copy &amp;&amp; paste:</string>
-               </property>
-               <property name="buddy">
-                <cstring>cbMDragAndDropFilesPolicy</cstring>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="cbMAddingAppendingFilesPolicy">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
-              <widget class="QComboBox" name="cbMDragAndDropFilesPolicy">
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_25">
+               <property name="text">
+                <string>When adding d&amp;irectories via drag &amp;&amp; drop/copy &amp;&amp; paste:</string>
+               </property>
+               <property name="buddy">
+                <cstring>cbMDragAndDropDirectoriesPolicy</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QComboBox" name="cbMDragAndDropDirectoriesPolicy">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -2632,6 +2652,7 @@
   <tabstop>pbMBrowseMediaInfoExe</tabstop>
   <tabstop>cbMAddingAppendingFilesPolicy</tabstop>
   <tabstop>cbMDragAndDropFilesPolicy</tabstop>
+  <tabstop>cbMDragAndDropDirectoriesPolicy</tabstop>
   <tabstop>cbMAlwaysCreateSettingsForVideoFiles</tabstop>
   <tabstop>cbMSortFilesTracksByTypeWhenAdding</tabstop>
   <tabstop>cbMReconstructSequencesWhenAdding</tabstop>
