all: switch back to requiring & using Boost's file system library
gcc's implementation of the C++17 file system library doesn't support
UNC paths of style `\\?\…` on Windows. There doesn't seem to be any
progress towards implementing support for it.

Fixes #3058. See also #2916.

--- a/packaging/debian/control.erb
+++ b/packaging/debian/control.erb
@@ -9,8 +9,9 @@ Build-Depends:
  debhelper (>= 9),
  rake (>= 10),
  zlib1g-dev, libflac-dev, libogg-dev, libvorbis-dev, libgmp-dev, libcmark-dev,
- libboost-dev (>= 1.66), libgtest-dev, libfmt-dev (>= 4), libdvdread-dev,
- nlohmann-json3-dev, pkg-config, po4a, docbook-xsl, xsltproc,
+ libboost-dev (>= 1.66), libboost-filesystem-dev (>= 1.66),
+ libboost-system-dev (>= 1.66), libgtest-dev, libfmt-dev (>= 4),
+ libdvdread-dev, nlohmann-json3-dev, pkg-config, po4a, docbook-xsl, xsltproc,
 <% if use_qt6 %>
  qt6-base-dev, qt6-base-dev-tools, qt6-multimedia-dev, libqt6svg6-dev
 <% else %>
