GUI: mux: add option for stopping processing after primary video track ends
Part of the implementation of #3506.

--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -1629,6 +1629,13 @@
                </widget>
               </item>
               <item>
+               <widget class="QCheckBox" name="stopAfterVideoEnds">
+                <property name="text">
+                 <string>Stop after video track ends</string>
+                </property>
+               </widget>
+              </item>
+              <item>
                <layout class="QHBoxLayout" name="horizontalLayout_10">
                 <item>
                  <widget class="QLabel" name="additionalOptionsLabel">
@@ -2434,6 +2441,7 @@
   <tabstop>splitMaxFiles</tabstop>
   <tabstop>linkFiles</tabstop>
   <tabstop>webmMode</tabstop>
+  <tabstop>stopAfterVideoEnds</tabstop>
   <tabstop>additionalOptions</tabstop>
   <tabstop>editAdditionalOptions</tabstop>
   <tabstop>segmentUIDs</tabstop>
